<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HIIT Me</string>
    <string name="title_program_detail">Program Detail</string>
    <string name="caption_actionbar_about">About</string>
    <string name="caption_actionbar_edit">Edit</string>
    <string name="caption_actionbar_run">Run</string>
    <string name="caption_actionbar_discard_changes">Discard Changes</string>
    <string name="caption_actionbar_add">Create New Program</string>
    <string name="caption_actionbar_delete">Delete Program</string>
    <string name="caption_actionbar_save">Save</string>
    <string name="effort_hard">Hard</string>
    <string name="effort_easy">Easy</string>
    <string name="effort_rest">Rest</string>
    <string name="effort_none">n/a</string>
    <string name="title_edit">Editing Program</string>
    <string name="title_select">Select Program</string>
    <string name="title_run">Run Program</string>
    <string name="title_view">View Program</string>
    <string name="time_unit_minute">minute</string>
    <string name="time_unit_second">second</string>
    <string name="time_unit_pluraliser">s</string>
    <string name="finish_message">Finished, well done!</string>
    <string name="caption_edit_effort">Effort: </string>
    <string name="caption_edit_duration">Duration: </string>
    <string name="caption_edit_exercise_name">Name: </string>
    <string name="about_message">HIIT Me, a High Intensity Interval Training app
        \n\nCopyright © Alex Gilleran 2015
        \n\nSource code available under GPLv3 at <a href="http://github.com/AlexGilleran/HIITMe">http://github.com/AlexGilleran/HIITMe</a>
        \n\nThe following are licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>:
        \n<li>Icons from <a href="http://icons8.com">http://icons8.com</a></li>
        \n<li>Launcher, Add Exercise and Add Group icons, derivatives of icons by <a href="http://www.freepik.com" title="Freepik">Freepik</a>
            from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></li>
        \n<li>Modified Progress Wheels by Todd Davies from <a href="https://github.com/Todd-Davies/ProgressWheel">https://github.com/Todd-Davies/ProgressWheel</a>.</li>
    </string>
    <string name="heading_edit_node">Edit Group</string>
    <string name="heading_edit_exercise">Edit Exercise</string>
    <string name="error_program_zero_duration">This program runs for 0 seconds! Add some exercises to it first!</string>
    <string name="error_no_connection">Lost connection to run service</string>
    <string name="delete_warning">Are you sure you want to delete this</string>
    <string name="node_name">group</string>
    <string name="exercise_name">exercise</string>
    <string name="tour_exercise_button">Touch and drag the add exercise button to add an exercise</string>
    <string name="tour_group_button">Touch and drag the add group button to add a group</string>
    <string name="tour_group_header">Tap the top of a group to select it, or hold down then drag to move it</string>
    <string name="tour_edit_button">With a group or exercise selected, you can edit by tapping this button</string>
    <string name="tour_exercise_view">You can also tap exercises to select them, or hold down and drag to move them</string>
</resources>