<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- program list -->
    <item
        android:id="@+id/actionbar_icon_about"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_about">
    </item>
    <item
        android:id="@+id/actionbar_icon_new_program"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_add">
    </item>

    <!-- view program -->
    <item
        android:id="@+id/actionbar_icon_delete_program"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_delete">
    </item>
    <item
        android:id="@+id/actionbar_icon_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_edit">
    </item>
    <item
        android:id="@+id/actionbar_icon_run"
        android:icon="@drawable/ic_action_play"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_run">
    </item>

    <!-- editing program -->
    <item
        android:id="@+id/actionbar_icon_discard_changes"
        android:icon="@drawable/ic_action_remove"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_discard_changes">
    </item>
    <item
        android:id="@+id/actionbar_icon_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom"
        android:title="@string/caption_actionbar_save">
    </item>

</menu>